# xero-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yaml
tests/: conftest.py  test_accounting_api_models.py  test_payroll_UK_api.py  test_payroll_UK_validators.py  test_rate_limiter.py
xeroapi/: __init__.py  accounting_api.py  accounting_api_models.py  example.py  payroll_UK_api.py  payroll_UK_validators.py  tokens.py  xero_client.py
