[tool.poetry]
name = "xeroapi"
version = "1.0.0"
description = ""
authors = ["tim-meiwald-bluefruit <tim.meiwald@bluefruit.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
email-validator = "^1.3.1"
httpx = "^0.23.3"
fastapi = "^0.103.2"
python-dotenv = "^1.0.0"
uvicorn = "^0.21.1"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
